# Eng2Span

./: .gitignore  LICENSE  README.md  data-vis.ipynb  download-data.py  eng2span_slurm.sh  fine_tuning.ipynb  ft-mt5.ipynb  ft-opus.ipynb  gen-metrics.sh  log_slrm_mt5_bleu_divide-by-zero.o1769169  log_slrm_opus.o1767563  pyproject.toml  requirements.txt  show-metrics.sh
data/: Helsinki-NLP-opus_books.data  combined.data  eng-spanish.data  englishspanish-translation-dataset.data  google-wmt24pp.data  kde4.data
logs/: log_slrm.o1770122  log_slrm_m2m100.o1768398  log_slrm_mbart.o1768399  log_slrm_nllb.o1768397
notebooks/: fine_tuning.ipynb  ft-mt5.ipynb  industry-tools-comparison.ipynb  survey-analysis.ipynb
results/: benchmarks.csv  survey-results.csv
scripts/: gen-metrics.sh
src/: download_data.py  ft-m2m100.py  ft-mbart.py  ft-mt5.py  ft-nllb.py  ft-opus.py  generate-baselines.py  gui.py  join_eval_metrics.py  m2m_baseline.py  m2m_ft.py  mbart_baseline.py  mbart_ft.py  nllb_baseline.py  nllb_ft.py  opus_baseline.py  opus_ft.py  process_data.py  translate-repl.py  translate_repl.py
src/baselines/: mbart_baseline.py
src/benchmarks/: nllb_ft.py  opus_ft.py
src/finetuning/: ft-m2m100.py
