[project]
name = "eng2span"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.5.2",
    "datasets>=3.4.1",
    "evaluate>=0.4.3",
    "huggingface-hub>=0.29.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "protobuf>=6.30.1",
    "requests>=2.32.3",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "transformers>=4.50.0",
    "wordcloud>=1.9.4",
]
